2007-10-14  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-08
	* Fixed StorageManager to also test the DQM archive output base path
          if we have requested DQM archiving

2007-10-14  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-07
	* Fixed bug in ConsumerPipe and DQMConsumerPipe where pushEvent to the
          SMSProxyServer did not update the "lastEventRequestTime_"

2007-10-08  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-06
	* Changed EventStreamHttpReader to fix a print bug and give a warning
          for when the SM was halted rather than stopped.

2007-10-08  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-05
	* Changed EventStreamHttpReader to allow reconnect if the SM is down 
          (Change from Bill).

2007-09-14  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-04
	* fixed EventStreamHttpReader to allow proper end of run processing, 
          and add an example to check proper behaviour. Requires
          IOPool/Streamer V04-24-00 only in the 1_7_X series.

2007-09-12  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-03
	* fixed SMDQMClientExample.cc to be compatible with changes to DQM Services
          by removing use of MonitorUIRoot/MonitorUserInterface

2007-08-22  Emilio Meschi <Emilio.Meschi@cern.ch>

	* tag V03-07-02
	* fixed icon paths in application web page

2007-08-19  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-01
        * Check that output base path, mailbox path, and perl script files 
          actually exist during configure action, go into fail state if
          any of these do not exist.

2007-08-18  Harry Cheung <cheung@fnal.gov>

	* tag V03-07-00
        * changes to move parameters out of streamer output modules and
          allow default values. So online parameters are in the SM XDAQ XML file
          while offline parameters have defaults and can be missing from the
          config file. The parameters common to all streams appear in the XML
          file, while each specific stay in the SM config file.